<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Button
            android:id="@+id/btn_add_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_add" />
    </LinearLayout>
</ScrollView>